# BrailleVision

./: .gitignore  QUICKSTART.md  README.md  SETUP.md  app.py  main.py  output.txt  package-lock.json  package.json  pipeline-test-report.md  pyproject.toml  requirements.txt  start-all.sh  test_norm.py  test_parse_all.py  test_pipeline.py  test_text_braille_translator.py
app/: error.js  globals.css  layout.js  page.js
components/: AlignedBrailleComparison.jsx  AuthForm.jsx  AuthProvider.jsx  BackButton.jsx  BlockAlignedComparison.jsx  DashboardShell.jsx  DocumentsPanel.jsx  GraphInsightPanel.jsx  I18nProvider.jsx  LanguageSwitcher.jsx  LoadingCard.jsx  NotificationCenter.jsx  PageSegmentationDebugPanel.jsx  ProfileSettingsPanel.jsx  ProtectedRoute.jsx  Sidebar.jsx  UploadPanel.jsx  WordAddinWorkspace.jsx
extension/: background.js  content.js  manifest.json  style.css
lib/: alignedBrailleRows.js  analyzeGraphImage.js  blockDisplayModel.js  blockTokenMapping.js  brailleAssistant.js  brfExport.js  convertToBraille.js  documentProcessing.js  documentReview.js  documents.js  exportDocuments.js  exportStructure.js  extractImageText.js  extractPdfText.js  graphAnalysisCore.mjs  graphResultUtils.js  languageDetection.js  mathDisplayFormatting.js  offlineGraphAnalysis.js  pageBlocks.js  pageNavigation.js  pageSegmentation.js  pdfExtractionHeuristics.js  pdfMathTextNormalization.js  pdfTextLayout.js  profiles.js  readErrorResponse.js  structureDetection.js  supabaseClient.js  textDisplayModel.js  translateBrailleText.js  turkishTextNormalization.js  userMessages.js
(+63 files in other folders)
