[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braillevision"
version = "0.1.0"
description = "Rule-based Nemeth Braille translation engine for mathematical expressions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "BrailleVision Team" }
]
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "."
pattern = "test_*.py"
top-level-directory = "."
